data browser and start timestamp
